--- a/results.html
+++ b/results.html
@@ -27,17 +27,17 @@
                 A continuación se muestran las gráficas obtenidas a partir de los datos recopilados:
             </p>
             <!-- Aquí puedes insertar imágenes, gráficos o iframe de Google Charts/DataStudio -->
-            <img src="grafica1.png" alt="Gráfica 1 - Resultados del formulario">
-            <img src="grafica2.png" alt="Gráfica 2 - Opiniones sobre la Casa Hogar">
-            <img src="grafica3.png" alt="Gráfica 1 - Resultados del formulario">
-            <img src="grafica4.png" alt="Gráfica 2 - Opiniones sobre la Casa Hogar">
-            <img src="grafica5.png" alt="Gráfica 1 - Resultados del formulario">
-            <img src="grafica6.png" alt="Gráfica 2 - Opiniones sobre la Casa Hogar">
-            <img src="grafica7.png" alt="Gráfica 1 - Resultados del formulario">
-            <img src="grafica8.png" alt="Gráfica 2 - Opiniones sobre la Casa Hogar">
-            <img src="grafica9.png" alt="Gráfica 1 - Resultados del formulario">
-            <img src="grafica10.png" alt="Gráfica 2 - Opiniones sobre la Casa Hogar">
-            <img src="grafica11.png" alt="Gráfica 2 - Opiniones sobre la Casa Hogar">
+            <img src="grafica1.PNG" alt="Gráfica 1 - Resultados del formulario">
+            <img src="grafica2.PNG" alt="Gráfica 2 - Resultados del formulario">
+            <img src="grafica3.PNG" alt="Gráfica 3 - Resultados del formulario">
+            <img src="grafica4.PNG" alt="Gráfica 4 - Resultados del formulario">
+            <img src="grafica5.PNG" alt="Gráfica 5 - Resultados del formulario">
+            <img src="grafica6.PNG" alt="Gráfica 6 - Resultados del formulario">
+            <img src="grafica7.PNG" alt="Gráfica 7 - Resultados del formulario">
+            <img src="grafica8.PNG" alt="Gráfica 8 - Resultados del formulario">
+            <img src="grafica9.PNG" alt="Gráfica 9 - Resultados del formulario">
+            <img src="grafica10.PNG" alt="Gráfica 10 - Resultados del formulario">
+            <img src="grafica11.PNG" alt="Gráfica 11 - Resultados del formulario">
         </section>
 
         <section>
