--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <section>
             <h2>Introducción al Proyecto</h2>
             <p>
-                Este sitio presenta el proyecto de investigación sobre *La Casa Hogar de Chetumal*, una institución dedicada al cuidado, protección y formación de niñas, niños y adolescentes en situación vulnerable. 
+                Este sitio presenta el proyecto de investigación sobre *La Casa Hogar de Chetumal*, una institución dedicada al cuidado, protección y formación de niñas, niños y adolescentes en situación vulnerable.
+                <img src"casahogar1.jpg" alt="Entrada a la casa hogar" width="100" height="150">
+
             </p>
         </section>
 
