--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
 
             </p>
-            <img src"casahogar1.jpg" alt="Entrada a la casa hogar" width="100" height="150">
+            <img src="casahogar1.jpg" alt="Entrada a la casa hogar">
         </section>
 
         <section>
