--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
             </p>
             <img src="casahogar1.JPG" alt="Entrada a la casa hogar" height="100" width="150">
+             <img src="casahogar2.JPG" alt="Entrada a la casa hogar" height="100" width="150">
         </section>
 
         <section>
