--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
 
             </p>
-            <img src="casahogar1.JPG" alt="Entrada a la casa hogar" height="100" width="150">
+            <img src="casahogar1.jpg" alt="Entrada a la casa hogar" height="100" width="150">
             
         </section>
 
