--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <h2>Introducción al Proyecto</h2>
             <p>
                 Este sitio presenta el proyecto de investigación sobre *La Casa Hogar de Chetumal*, una institución dedicada al cuidado, protección y formación de niñas, niños y adolescentes en situación vulnerable. 
+                
             </p>
+            <img src="casahogar1.jpg" alt="Entrada a la casa hogar" height="100" width="150">
         </section>
 
         <section>
