--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                 Este sitio presenta el proyecto de investigación sobre *La Casa Hogar de Chetumal*, una institución dedicada al cuidado, protección y formación de niñas, niños y adolescentes en situación vulnerable.
                 
             </p>
-            <img src="casahogar1.jpg" alt="Entrada a la casa hogar" height="150" width="200">
-            
+            <center>
+            <table>
+                <tr><td><img src="casahogar1.jpg" alt="Entrada a la casa hogar" height="150" width="200"></td></tr>
+            </table>
+            </center>
         </section>
 
         <section>
