--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
             <center>
             <table>
-                <tr><td><img src="casahogar1.jpg" alt="Entrada a la casa hogar" height="150" width="200"></td><td><img src="casahogar2.jpg" alt="Entrada a la casa hogar2" height="160" width="200"></td></tr>
+                <tr><td><img src="casahogar1.jpg" alt="Entrada a la casa hogar" height="150" width="200"></td><td><br></td><td><img src="casahogar2.jpg" alt="Entrada a la casa hogar2" height="160" width="200"></td></tr>
             </table>
             </center>
         </section>
